--- a/index.html
+++ b/index.html
@@ -86,46 +86,71 @@ Argumenty tu przedstawione (poza ogólną nauką Pisma Świętego, proroctwami, 
 odrzucają niebiblijną koncepcję Trójcy / Trójjedynego boga (przedstawianego przez jej wyznawców jako trzech osób: Ojca, Syna i Ducha św. tworzących razem jednego boga)
 prezentowaną przez większość denominacji protestanckich, prawosławie i katolicyzm. 
 W opinii autora Biblia przedstawia Boga Ojca (JHWH) i Jego Syna, jako dwie odrębne osoby i dwie odrębne istoty. 
-Syn - podległy i niższy od Ojca bedący obrazem Boga, mający początek przed stworzeniem Świata, przez którego cały świat się stał. 
-Bóg Ojciec - nie mający początku, którego nikt z ludzi nie widział i widzieć nie może. 
-Takie było rozumienie apostołów i pierwszych chrześcijan, a później części arian, braci polskich i innych podążających za nauką Biblii, nierzadko zabijanych za tę wiarę.
-W kolejnych wiekach ludzkie sobory wykrzywiły te proste prawdy.
+Syn - podległy i niższy od Ojca (jednocześnie najwyższy ponad całym stworzeniem) bedący obrazem Boga, mający początek przed stworzeniem Świata, przez którego cały świat się stał. 
+Bóg Ojciec / Jedyny Prawdziwy Bóg - nie mający początku, którego nikt z ludzi nie widział i widzieć nie może. 
+W opinii autora takie było rozumienie apostołów i pierwszych naśladowców Jezusa, a później części arian, braci polskich i innych podążających za nauką Biblii, 
+nierzadko zabijanych za tę wiarę. W kolejnych wiekach ludzkie sobory wykrzywiły te proste prawdy.
 
 </br></br> Inne koncepcje i filozofia ludzka obalona przez artykuły na tej stronie, a również prezentowane przez niemal całe tzw. "chrześcijaństwo" to np.: 
-</br>• nauka o nieśmiertelnej duszy i wiecznych mękach w piekle (wypaczająca dobry charakter Boga)
-</br>• nauka o obcowaniu świętych już obecnie (w kontrze do biblijnego oczekiwania przez każdego człowieka na zmartwychwstanie)
-</br>• tzw. handel "odpustami" oraz zbawienie z uczynków (zamiast zbawienia jedynie przez wiarę w Jezusa Chrystusa) 
-</br>• niepodważalny autorytet papieża, patriarchy lub innego człowieka uzurpującego sobie nieomylność w sprawach wiary (zamiast jedynie Biblii) 
-</br>• unia Państwa z Kościołem (w kontrze do biblijnego rozdzielenia spraw "cesarza" i spraw Boga) 
-</br>• konieczność "kapłanów" i "liturgii" (w kontrze do powszechnego kapłaństwa wierzących i istnienia biskupów tylko jako prowadzących autonomiczne zbory)
-</br>• transsubstancjacja, przeistoczenie, eucharystia (w kontrze do pokazanej przez Jezusa pamiątki Jego śmierci i późniejszego zmartwychwstania)
-</br>• traktowanie Ducha świętego jako osoby i jako element boga trójjedynego lub podważanie tzw. preegzystencji Jezusa zanim narodził się w Betlejem
-</br>• demoniczne manifestacje w kościołach charyzmatycznych oraz czczenie ludzi, obrazów, wytworów sztuki lub relikwi (zamiast Boga Jedynego i Jego Syna) 
-</br>• obrzędowość, zabobon, rzekome objawienia, ludzka tradycja i bałwochwalstwo (w kontrze do czczenia Boga w duchu i prawdzie oraz poleganiu na Biblii)
-</br>• konieczność zachowywania określonych świąt, sabatu lub diety jako koniecznych do zbawienia
-</br>• gloryfikowanie świętych i Maryi, rzekomej "królowej niebios" i jej "wstawiennictwa" (zamiast jedynie Boga i Chrystusa)
-</br>• teoria ewolucji (w kontrze do biblijnego opisu stworzenia i młodej Ziemi)
+</br> • nauka o nieśmiertelnej duszy i wiecznych mękach w piekle (wypaczająca dobry charakter Boga)
+</br> • nauka o obcowaniu świętych już obecnie (w kontrze do biblijnego oczekiwania przez każdego człowieka na zmartwychwstanie)
+</br> • tzw. handel "odpustami" oraz zbawienie z uczynków (zamiast zbawienia jedynie przez wiarę w Jezusa Chrystusa) 
+</br> • niepodważalny autorytet papieża, patriarchy lub innego człowieka przypisującego sobie nieomylność w sprawach wiary (zamiast jedynie Biblii) 
+</br> • unia Państwa z Kościołem (w kontrze do biblijnego rozdzielenia spraw "cesarza" i spraw Boga) 
+</br> • konieczność "kapłanów" i "liturgii" (w kontrze do powszechnego kapłaństwa wierzących i istnienia biskupów tylko jako prowadzących autonomiczne zbory)
+</br> • transsubstancjacja / przeistoczenie / eucharystia (w kontrze do pokazanej przez Jezusa pamiątki Jego śmierci i późniejszego zmartwychwstania)
+</br> • traktowanie Ducha świętego jako osoby i jako element "boga trójjedynego", lub przeciwnie - życie ale bez prowadzenia przez Ducha bożego
+</br> • demoniczne manifestacje w kościołach charyzmatycznych oraz czczenie ludzi, obrazów, wytworów sztuki lub relikwi (zamiast Boga Jedynego i Jego Syna) 
+</br> • obrzędowość, zabobon, rzekome objawienia, ludzka tradycja i bałwochwalstwo (w kontrze do czczenia Boga w duchu i prawdzie oraz poleganiu na Biblii)
+</br> • konieczność zachowywania określonych świąt, sabatu lub diety jako koniecznych do zbawienia
+</br> • skupienie się na tzw. "teoriach spiskowych" i badanie zagadnień "tego świata" w stopniu przerastającym potrzebę biblijną lub propagowanie nienawiści do pewnych grup  
+</br> • gloryfikowanie świętych i Maryi, rzekomej "królowej niebios" i jej "wstawiennictwa" (zamiast jedynie Boga i Chrystusa) lub podważanie apostolstwa św. Pawła
+</br> • teoria ewolucji (w kontrze do biblijnego opisu stworzenia i młodej Ziemi)
 
-</br>
-Nie tylko większość kościołów tkwi w tego typu błędnych naukach, ale pojawia się również coraz więcej nauczycieli internetowych, którzy głoszą podobne herezje. 
-</br>Niniejsza strona w jakimś stopniu adresuje ten problem i daje biblijne wyjaśnienie wielu spornych spraw.
-</br>
+</br></br>
+Nie tylko wiele wspólnot tkwi w tego typu błędach, ale również wiele nauczycieli internetowych je powiela - bezrefleksyjnie lub celowo. 
+Niniejsza strona w jakimś stopniu adresuje ten problem i daje biblijne wyjaśnienie wielu spornych spraw. Materiały te mogą być pomocą we wzroście, ale 
+muszą być traktowane wyłącznie jako komentarz do Pisma Świętego, które to wyjaśnia samo siebie. Jako autor nie uważam się za Proroka, ani za osobę mającą monopol na prawdę.
+Prawda jest w Chrystusie i Chrystus jest Prawdą, dlatego swoją wiarę (podobnie jak autorzy ww. stron) buduję wyłącznie na Słowie Bożym i prowadzeniu przez Ducha 
+i staram się żyć wg niego, a jeżeli ktoś wskaże mi na podstawie Biblii, że się w czymś mylę to zmienię swój pogląd i będę wdzięczny za wykazanie go.  
+</br></br>
+
+Strona jest przeznaczona zarówno dla niewierzących w Jezusa - jako możliwość poznania przez nich uzasadnienia naszej nadziei co do życia wiecznego, jak również wierzących 
+- dla zbudowania. Niniejsze materiały nie rozstrzygają definitywnie poruszanych spraw, ponadto przedstawiono naturalnie jedynie mały wycinek tego co można z Biblii zrozumieć. 
+Na dany moment swojego życia każdy z nas ma nieco inne rozumienie, nie wszystko jest do rozważenia przez każdego i nie w równym stopniu szczegółowości. 
+Jest naturalne, że nie wszystkich Bóg pociąga i daje narzędzia lub potrzebę do badania każdego jednego zagadnienia Pisma Świętego w równie szerokim zakresie 
+- a mimo to ludzie Ci są przez Boga zbawiani, wedle swojej wiary i życia. Podobnie jak każdy członek w ciele pełni inne funkcje.
+Autor również jest świadomy własnej niedoskonałości i możliwych błędów interpretacji jak również możliwych błędów Autorów cytowanych stron. 
+Jeżeli jesteś przekonany co do swojej wiary i poznania, a argumenty przytoczone nie przekonują Cię - to niewykluczone że to Ty masz rację. 
+Materiał tutaj spisany jest opisem doświadczeń Starszych, w dobrej wierze i szczerze. Ale to dopiero życie wg ducha, prowadzenie 
+przez niego, owoce wiary i miłość są najbardziej istotne, a nie tylko teoretyczna wiedza. Pamiętajmy że "Poznanie nadyma, ale miłość buduje". 
+To Bóg objawia poszczególnym ludziom co chce - każdemu wg miary. Jednak podstawowa wspólnota, miłość i jedność między oddanymi Chrystusowi, 
+o co On sam zresztą się modlił, jest zachowana i żywa mimo pewnych różnic w rozumieniu. Jako autor muszę stwierdzić, że nie znalazłem na świecie osoby, 
+z którą w 100% zgadzam się w każdym jednym aspekcie biblijnym i uważam to za sytuację normalną. Wszyscy również korzystamy i korzystajmy z materiałów ludzi 
+z którymi nie zgadzamy się w pełni, a są wartościowe. W jakichkolwiek sporach doktrynalnych pamiętajmy o słowach naszego Pana: 
+"Po tym wszyscy poznają, żeście uczniami moimi, jeśli miłość wzajemną mieć będziecie".
+  
+</br></br>
 Koncepcja 1000-letniego królestwa Chrystusa jest prezentowana odmiennie na zamieszczonych stronach (thaleia.pl i jehoszua.ddv.pl) 
-ale ten aspekt nie ma znaczącego wpływu na życie chrześcijańskie. Zaprezentowana interpretacja Księgi Apokalisy na jehoszua.ddv.pl jest w opinii autora najbardziej bliska prawdy i prawdopodobna, 
-ale również nie może być przedmiotem dogmatycznej wiary i zawsze jest obarczona pewną dozą niepewności lub znaczenie pewnych symboli (jak np. "znamię bestii") może być inne.
-Autor skłania się ku tej właśnie interpretacji (amillenarystycznej / historycznej), ale nie uważa konieczności wiary w którąś z wersji jako konieczną do zbawienia.
+ale ten aspekt nie ma znaczącego wpływu na życie chrześcijańskie. To ostatecznie Bóg pokaże nam jak wygląda, czy też będzie wyglądać "1000-letnie królewstwo", czy będzie ono 
+literalne, i jaki będzie jego cel dla wierzących i (za życia) niewierzących. Zaprezentowana interpretacja Księgi Apokalisy na jehoszua.ddv.pl jest w opinii autora najbardziej 
+bliska prawdy i prawdopodobna, ale również nie może być przedmiotem dogmatycznej wiary i zawsze jest obarczona pewną dozą niepewności lub znaczenie pewnych symboli 
+(jak np. "znamię bestii") może być inne. Cel tej księgi jest zarówno indywidualny jak i uniwersalny.    
+Autor skłania się ku przedstawionej interpretacji (amillenarystycznej / historycznej), ale nie uważa konieczności wiary w którąś z wersji jako konieczną do zbawienia. 
 Część proroctw biblijnych i eschatologii jest jeszcze przed nami ukryta i pełna wiedza będzie znana na koniec czasów, co nie znaczy, że pewne symbole nie są już jawne. 
 Autor odrzuca także teorię o płaskiej, nieruchomej ziemi zaprezentowaną na wspomnianej stronie, chociaż ten aspekt nie ma bezpośredniego wpływu na społeczność z Bogiem. 
 
 </br></br>
 Kopia stron, Pisma Św. i innych treści została dokonana w celu ich popularyzacji i zachowania dla przyszłych pokoleń na wypadek utraty tych danych z serwerów źródłowych.
-Miejsc z tak wartościowym materiałem jest bardzo mało w polskim internecie, autor ma także nadzieję w przyszłości gromadzić tutaj inne zasoby antytrynitarne.
+Miejsc z tak wartościowym materiałem jest bardzo mało w polskim internecie, autor ma także nadzieję w przyszłości gromadzić tutaj inne zasoby antytrynitarne, jeśli Bóg pozwoli.
 Wszelkie prawa autorskie należą się autorom skopiowanych witryn.
 Autor, który zebrał te materiały nie należy do żadnego formalnego kościoła, czy organizacji ludzkiej.
-Wierzy w zastępczą śmierć Chrystusa za wszystkich wierzących ludzi, w Jego zmartwychwstanie i w zmartwychwstanie (oddanych Jezusowi) sprawiedliwych (do życia wiecznego) i niesprawiedliwych (usłyszenie wyroku, kara i wieczna śmierć) na końcu czasów.
+Wierzy w zastępczą śmierć Chrystusa za wszystkich wierzących ludzi, w Jego zmartwychwstanie i w zmartwychwstanie (oddanych Jezusowi) sprawiedliwych (do życia wiecznego) 
+i innych (usłyszenie wyroku, kara i druga śmierć) na końcu czasów.
 Wierzy, że kryterium braterstwa w Panu Jezusie jest (przytoczone ze strony thaleia.pl): pokuta czyli odwrócenie się od grzesznego życia, wiara w Boga Ojca, 
 wiara w Jezusa jako Bożego Syna oraz w Jego zastępczą ofiarę za popełnione grzechy, uznanie Go jako swojego Zbawiciela i Pana, owoce życia będące świadectwem odrodzenia z Bożego Ducha. 
-Ludzie wierzący w ten sposób i posłuszni słowom Syna Bożego to zbór Jezusa Chrystusa. I choć nieliczni, znajdują się obecnie we wszystkich kościołach i poza nimi. Zapraszam do lektury!
+Ludzie wierzący w ten sposób i posłuszni słowom Syna Bożego to zbór Jezusa Chrystusa. 
+I choć nieliczni, znajdują się obecnie we wszystkich kościołach i poza nimi. Zapraszam do lektury!
 <div>
 <p style="float:left;font-size:14px;margin-left:3px;margin-top:3px;margin-bottom:3px;">( kontakt e-mail: mojabibliagithub@gmail.com )</p>
 
