--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@ Materiał tutaj spisany jest opisem doświadczeń Starszych, w dobrej wierze i s
 przez niego, owoce wiary i miłość są najbardziej istotne, a nie tylko teoretyczna wiedza. Pamiętajmy że "Poznanie nadyma, ale miłość buduje". 
 To Bóg objawia poszczególnym ludziom co chce - każdemu wg miary. Jednak podstawowa wspólnota, miłość i jedność między oddanymi Chrystusowi, 
 o co On sam zresztą się modlił, jest zachowana i żywa mimo pewnych różnic w rozumieniu. Jako autor muszę stwierdzić, że nie znalazłem na świecie osoby, 
-z którą w 100% zgadzam się w każdym jednym aspekcie biblijnym i uważam to za sytuację normalną. Wszyscy również korzystamy i korzystajmy z materiałów ludzi 
+z którą w 100% zgadzam się w każdym jednym aspekcie biblijnym i uważam to za sytuację normalną. Wszyscy również przecież korzystamy z materiałów ludzi 
 z którymi nie zgadzamy się w pełni, a są wartościowe. W jakichkolwiek sporach doktrynalnych pamiętajmy o słowach naszego Pana: 
 "Po tym wszyscy poznają, żeście uczniami moimi, jeśli miłość wzajemną mieć będziecie".
   
