--- a/index.html
+++ b/index.html
@@ -110,28 +110,30 @@ i innych podążających za nauką Biblii, nierzadko zabijanych za tę wiarę. W
 
 </br></br>
 Nie tylko wiele wspólnot tkwi w tego typu błędach, ale również wiele nauczycieli internetowych je powiela - bezrefleksyjnie lub celowo. 
-Niniejsza strona w jakimś stopniu adresuje ten problem i daje biblijne wyjaśnienie wielu spornych spraw. Materiały te mogą być pomocą we wzroście, ale 
-muszą być traktowane wyłącznie jako mały komentarz do Pisma Świętego, które to wyjaśnia samo siebie. Jako autor nie uważam się za Proroka, ani za osobę 
-mającą monopol na prawdę. Prawda jest w Chrystusie i Chrystus jest Prawdą, dlatego swoją wiarę (podobnie jak Autorzy ww. stron) buduję 
-wyłącznie na Słowie Bożym i prowadzeniu przez Ducha i staram się żyć wg niego, a jeżeli ktoś wskaże mi na podstawie Biblii, 
-że się w czymś mylę to zmienię swój pogląd i będę wdzięczny za wykazanie go. </br></br>
+Niniejsza strona w jakimś stopniu adresuje ten problem i daje biblijne wyjaśnienie wielu spornych spraw. Materiały te mogą być pomocą we wzroście duchowym, ale 
+muszą być traktowane jako komentarz do Pisma Świętego, które to Pismo wyjaśnia samo siebie. Jako osoba, która skopiowała te materiały, nie uważam się za Proroka, ani za osobę 
+mającą monopol na prawdę. Prawda jest w Chrystusie i Chrystus jest Prawdą, dlatego swoją wiarę (podobnie jak Autorzy ww. stron) i życie buduję 
+wyłącznie na Słowie Bożym i prowadzeniu przez Ducha. Jeżeli ktoś wskaże mi na podstawie Biblii, 
+że się w czymś mylę to zmienię swój pogląd i będę wdzięczny za wykazanie go. Kopiując te strony internetowe traktuję to 
+z dużą powagą, ponieważ temat ten dotyka zarówno Stwórcy i Jego Słowa jak i życia poszczególnych ludzi. Liczę, że Dobry Ojciec pobłażliwie odniesie się 
+do moich ewentualnych błędów. Żywię nadzieję, że przyczyni się to do zbliżania ludzi do Boga, a nie przeciwnie.</br></br>
 
 Strona jest przeznaczona zarówno dla niewierzących w Jezusa - jako możliwość poznania przez nich uzasadnienia naszej nadziei co do życia wiecznego 
-i przyjęcia Ewangelii o darmowym zbawieniu z łaski, jak również wierzących - dla zbudowania. Niniejsze materiały nie rozstrzygają definitywnie 
+i przyjęcia Ewangelii o darmowym zbawieniu z łaski, jak również dla wierzących - celem ich 7zbudowania. Niniejsze materiały nie rozstrzygają definitywnie 
 poruszanych spraw, ponadto naturalnie przedstawiono jedynie mały wycinek tego co można z Biblii zrozumieć. 
-Na dany moment swojego życia każdy z nas ma nieco inne rozumienie, nie wszystko jest do rozważenia przez każdego i nie w równym stopniu szczegółowości. 
-Bóg nie wszystkim daje narzędzia, potrzebę i czas do badania każdego zagadnienia Pisma św. w równie szerokim zakresie 
+Mam świadomość, że każdy z nas ma nieco inne rozumienie i nie każda rzecz jest przeznaczona do rozważenia przez każdego 
 - a mimo to ludzie Ci są przez Boga zbawiani, wedle swojej wiary i życia. Podobnie jak każdy członek w ciele pełni inne funkcje.
 Jestem świadomy własnej niedoskonałości i możliwych błędów interpretacji, jak również możliwych błędów Braci/Autorów cytowanych stron. 
-Jeżeli jesteś przekonany co do swojej wiary i poznania, a argumenty przytoczone nie przekonują Cię - to niewykluczone że to Ty masz rację 
-w danej sprawie. Materiał tutaj spisany jest opisem doświadczeń Starszych, w dobrej wierze i szczerze. Ale to dopiero życie wg ducha, prowadzenie 
-przez niego, owoce wiary i miłość są najbardziej istotne, a nie tylko teoretyczna wiedza. Pamiętajmy że "Poznanie nadyma, ale miłość buduje". 
-To Bóg objawia poszczególnym ludziom co chce - każdemu wg miary. Jednak podstawowa wspólnota, miłość i jedność między oddanymi Chrystusowi, 
-o co On sam zresztą się modlił, jest zachowana mimo pewnych różnic w rozumieniu. Wszyscy korzystamy z materiałów ludzi 
-z którymi nie zgadzamy się w pełni, a są wartościowe. Muszę stwierdzić, że nie znalazłem na świecie osoby, 
-z którą w 100% zgadzam się w każdym jednym aspekcie biblijnym i uważam to za sytuację normalną. Kopiując niniejsze strony internetowe traktuję to 
-z wielką powagą i poczuciem odpowiedzialności, jednak nie mogę milczeć obserwując powszechne zwiedzenie jednocześnie mając dostępną tę wiedzę i rozeznanie. 
-Jednocześnie żywię nadzieję, że przyczyni się to do zbliżania ludzi do Boga, a nie przeciwnie. W jakichkolwiek sporach doktrynalnych 
+Jeżeli jesteś przekonany co do swojej wiary i poznania, a argumenty przytoczone nie przekonują Cię - to absolutnie nie wykluczam, że to Ty masz rację 
+w danej sprawie. Materiał tutaj spisany jest opisem doświadczeń Starszych, w dobrej wierze i ze szczerości. Ale to dopiero życie wg ducha, prowadzenie 
+przez niego, owoce wiary i miłość są najbardziej istotne, a nie tylko teoretyczna wiedza - o której wszakże możemy dyskutować. 
+Pamiętajmy że "Poznanie nadyma, ale miłość buduje". 
+To Bóg objawia poszczególnym ludziom co chce - każdemu wg miary. Jednak podstawowa wspólnota, miłość i jedność między oddanymi Chrystusowi ludźmi,  
+o co On sam zresztą się modlił, jest obecna mimo pewnych różnic w rozumieniu. Wszyscy korzystamy z materiałów ludzi 
+z którymi nie zgadzamy się w pełni, a są wartościowe. Osobiście nie znalazłem na świecie osoby, 
+z którą w 100% zgadzam się w każdym jednym aspekcie biblijnym i uważam to za sytuację normalną przy ilości treści jakie niesie Biblia oraz ograniczone czasu na dyskusję. 
+  
+W jakichkolwiek sporach doktrynalnych 
 pamiętajmy o słowach naszego Pana: "Po tym wszyscy poznają, żeście uczniami moimi, jeśli miłość wzajemną mieć będziecie".
   
 </br></br>
