--- a/index.html
+++ b/index.html
@@ -114,24 +114,25 @@ Niniejsza strona w jakimś stopniu adresuje ten problem i daje biblijne wyjaśni
 muszą być traktowane jako komentarz do Pisma Świętego, które to Pismo wyjaśnia samo siebie. Jako osoba, która skopiowała te materiały, nie uważam się za Proroka, ani za osobę 
 mającą monopol na prawdę. Prawda jest w Chrystusie i Chrystus jest Prawdą, dlatego swoją wiarę (podobnie jak Autorzy ww. stron) i życie buduję 
 wyłącznie na Słowie Bożym i prowadzeniu przez Ducha. Jeżeli ktoś wskaże mi na podstawie Biblii, 
-że się w czymś mylę to zmienię swój pogląd i będę wdzięczny za wykazanie go. Kopiując te strony internetowe traktuję to 
-z dużą powagą, ponieważ temat ten dotyka zarówno Stwórcy i Jego Słowa jak i życia poszczególnych ludzi. Liczę, że Dobry Ojciec pobłażliwie odniesie się 
-do moich ewentualnych błędów. Żywię nadzieję, że przyczyni się to do zbliżania ludzi do Boga, a nie przeciwnie.</br></br>
+że się w czymś mylę to zmienię swój pogląd i będę wdzięczny za wykazanie go. Kopiując te zasoby traktuję to 
+z dużą powagą, ponieważ temat ten dotyka zarówno naszego Stwórcy i Jego Słowa jak i życia poszczególnych ludzi. Liczę, że Dobry Ojciec pobłażliwie odniesie się 
+do moich ewentualnych błędów w tym temacie. Żywię nadzieję, że przyczyni się to do zbliżania ludzi do Boga, a nie przeciwnie.</br></br>
 
 Strona jest przeznaczona zarówno dla niewierzących w Jezusa - jako możliwość poznania przez nich uzasadnienia naszej nadziei co do życia wiecznego 
-i przyjęcia Ewangelii o darmowym zbawieniu z łaski, jak również dla wierzących - celem ich 7zbudowania. Niniejsze materiały nie rozstrzygają definitywnie 
-poruszanych spraw, ponadto naturalnie przedstawiono jedynie mały wycinek tego co można z Biblii zrozumieć. 
-Mam świadomość, że każdy z nas ma nieco inne rozumienie i nie każda rzecz jest przeznaczona do rozważenia przez każdego 
-- a mimo to ludzie Ci są przez Boga zbawiani, wedle swojej wiary i życia. Podobnie jak każdy członek w ciele pełni inne funkcje.
-Jestem świadomy własnej niedoskonałości i możliwych błędów interpretacji, jak również możliwych błędów Braci/Autorów cytowanych stron. 
+oraz możliwość przyjęcia Ewangelii o darmowym zbawieniu z łaski, jak również dla wierzących - celem ich zbudowania. Niniejsze materiały nie rozstrzygają definitywnie 
+poruszanych spraw, ponadto przedstawiono jedynie mały wycinek tego co można z Biblii zrozumieć. 
+Mam świadomość, że każdy z nas ma nieco inne rozumienie i nie każda rzecz jest przeznaczona do rozważania przez każdego człowieka na danym etapie jego życia. 
+Jestem świadomy własnej niedoskonałości i możliwych błędów interpretacji, jak również możliwych błędów Braci / Autorów cytowanych stron. 
 Jeżeli jesteś przekonany co do swojej wiary i poznania, a argumenty przytoczone nie przekonują Cię - to absolutnie nie wykluczam, że to Ty masz rację 
-w danej sprawie. Materiał tutaj spisany jest opisem doświadczeń Starszych, w dobrej wierze i ze szczerości. Ale to dopiero życie wg ducha, prowadzenie 
-przez niego, owoce wiary i miłość są najbardziej istotne, a nie tylko teoretyczna wiedza - o której wszakże możemy dyskutować. 
+w danej sprawie. Materiał tutaj spisany jest opisem doświadczeń Starszych, dokonanym w dobrej wierze i ze szczerością. Ale dopiero życie wg ducha, prowadzenie 
+przez niego, owoce wiary i miłość są najbardziej istotne, a nie tylko teoretyczna wiedza - o której wszakże również warto dyskutować. 
 Pamiętajmy że "Poznanie nadyma, ale miłość buduje". 
-To Bóg objawia poszczególnym ludziom co chce - każdemu wg miary. Jednak podstawowa wspólnota, miłość i jedność między oddanymi Chrystusowi ludźmi,  
-o co On sam zresztą się modlił, jest obecna mimo pewnych różnic w rozumieniu. Wszyscy korzystamy z materiałów ludzi 
+To Bóg objawia poszczególnym ludziom co chce - każdemu wg miary. Podobnie jak każdy członek w ciele pełni inne funkcje. 
+Jednak podstawowa miłość i jedność między ludźmi oddanymi Chrystusowi,   
+o co On sam zresztą się modlił, jest obecna mimo pewnych różnic w rozumieniu niektórych spraw. Wszyscy korzystamy z materiałów ludzi 
 z którymi nie zgadzamy się w pełni, a są wartościowe. Osobiście nie znalazłem na świecie osoby, 
-z którą w 100% zgadzam się w każdym jednym aspekcie biblijnym i uważam to za sytuację normalną przy ilości treści jakie niesie Biblia oraz ograniczone czasu na dyskusję. 
+z którą w 100% zgadzam się w każdym najmniejszym aspekcie biblijnym i uważam to za sytuację normalną, zważywszy ilość treści jakie niesie Biblia 
+oraz ograniczony czas na jej interpretowanie i dyskusje. 
   
 W jakichkolwiek sporach doktrynalnych 
 pamiętajmy o słowach naszego Pana: "Po tym wszyscy poznają, żeście uczniami moimi, jeśli miłość wzajemną mieć będziecie".
