--- a/index.html
+++ b/index.html
@@ -81,18 +81,26 @@
 
 <div style="clear:left;font-size:14px;text-align: justify;">
 
-Niniejsza strona zawiera tekst Biblii oraz kopie stron z materiałami pomocnymi w jej nietrynitarnej interpretacji (wiara w Jedynego Boga JHWH i Jego Syna Jezusa Chrystusa).
-Argumenty tu przedstawione (poza ogólną nauką Pisma Świętego, proroctwami, historią itd.) 
-odrzucają niebiblijną koncepcję Trójcy / Trójjedynego boga (przedstawianego przez jej wyznawców jako trzech osób: Ojca, Syna i Ducha św. tworzących razem jednego boga)
+Niniejsza strona zawiera tekst Biblii oraz kopie stron z materiałami pomocnymi w jej nietrynitarnej interpretacji 
+(wiara w Jedynego Boga JHWH i Jego Syna Jezusa Chrystusa). 
+
+Argumenty tu przedstawione (poza ogólną nauką Pisma Świętego, proroctwami, historią, ...) 
+odrzucają niebiblijną koncepcję Trójcy / Trójjedynego boga (przedstawianego przez jej wyznawców jako 
+trzech osób: Ojca, Syna i Ducha świętego tworzących rzekomo razem jednego boga) 
 prezentowaną przez większość denominacji protestanckich, prawosławie i katolicyzm. 
+
 W opinii autora Biblia przedstawia Boga Ojca (JHWH) i Jego Syna, jako dwie odrębne osoby i dwie odrębne istoty. 
 Syn - podległy i niższy od Ojca (jednocześnie najwyższy ponad całym stworzeniem) bedący obrazem Boga, 
 mający początek przed stworzeniem Świata, przez którego cały świat się stał. 
-Bóg Ojciec / Jedyny Prawdziwy Bóg - nie mający początku, którego nikt z ludzi nie widział i widzieć nie może. 
+
+Bóg Ojciec / Jedyny Prawdziwy Bóg - nie mający początku, którego nikt z ludzi nie widział i widzieć nie może, 
+a można Go poznać jedynie poprzez Słowo / Syna. 
+
 Takie było rozumienie apostołów i pierwszych naśladowców Jezusa, a później części arian, braci polskich 
 i innych podążających za nauką Biblii, nierzadko zabijanych za tę wiarę. W kolejnych wiekach ludzkie sobory wykrzywiły te proste prawdy.
 
-</br></br> Inne koncepcje i filozofia ludzka obalona przez artykuły na tej stronie, a również prezentowane przez niemal całe nominalne chrześcijaństwo to np.: 
+</br></br> Inne koncepcje i "filozofia ludzka" obalona przez artykuły na tej stronie, a również prezentowane 
+przez niemal całe nominalne chrześcijaństwo to np.: 
 </br> • nauka o nieśmiertelnej duszy i wiecznych mękach w piekle (wypaczająca dobry charakter Boga)
 </br> • nauka o obcowaniu świętych już obecnie (w kontrze do biblijnego oczekiwania przez każdego człowieka na zmartwychwstanie)
 </br> • tzw. handel "odpustami" oraz zbawienie z własnych uczynków (zamiast zbawienia jedynie przez wiarę w Jezusa Chrystusa) 
@@ -109,59 +117,102 @@ i innych podążających za nauką Biblii, nierzadko zabijanych za tę wiarę. W
 </br> • teoria ewolucji (w kontrze do biblijnego opisu stworzenia i młodej Ziemi)
 
 </br></br>
-Nie tylko wiele wspólnot tkwi w tego typu błędach, ale również wiele nauczycieli internetowych je powiela - bezrefleksyjnie lub celowo. 
-Niniejsza strona w jakimś stopniu adresuje ten problem i daje biblijne wyjaśnienie wielu spornych spraw. Materiały te mogą być pomocą we wzroście duchowym, ale 
-muszą być traktowane jako komentarz do Pisma Świętego, które to Pismo wyjaśnia samo siebie. Jako osoba, która skopiowała te materiały, nie uważam się za Proroka, ani za osobę 
-mającą monopol na prawdę. Prawda jest w Chrystusie i Chrystus jest Prawdą, dlatego swoją wiarę (podobnie jak Autorzy ww. stron) i życie buduję 
-wyłącznie na Słowie Bożym i prowadzeniu przez Ducha. Jeżeli ktoś wskaże mi na podstawie Biblii, 
-że się w czymś mylę to zmienię swój pogląd i będę wdzięczny za wykazanie go. Kopiując te zasoby traktuję to 
-z dużą powagą, ponieważ temat ten dotyka zarówno naszego Stwórcy i Jego Słowa jak i życia poszczególnych ludzi. Liczę, że Dobry Ojciec pobłażliwie odniesie się 
-do moich ewentualnych błędów w tym temacie. Żywię nadzieję, że przyczyni się to do zbliżania ludzi do Boga, a nie przeciwnie.</br></br>
+Nie tylko wiele wspólnot tkwi w tego typu błędach, ale również wielu nauczycieli internetowych je powiela - bezrefleksyjnie lub celowo. 
 
-Strona jest przeznaczona zarówno dla niewierzących w Jezusa - jako możliwość poznania przez nich uzasadnienia naszej nadziei co do życia wiecznego 
-oraz możliwość przyjęcia Ewangelii o darmowym zbawieniu z łaski, jak również dla wierzących - celem ich zbudowania. Niniejsze materiały nie rozstrzygają definitywnie 
-poruszanych spraw, ponadto przedstawiono jedynie mały wycinek tego co można z Biblii zrozumieć. 
-Mam świadomość, że każdy z nas ma nieco inne rozumienie i nie każda rzecz jest przeznaczona do rozważania przez każdego człowieka na danym etapie jego życia. 
-Jestem świadomy własnej niedoskonałości i możliwych błędów interpretacji, jak również możliwych błędów Braci / Autorów cytowanych stron. 
-Jeżeli jesteś przekonany co do swojej wiary i poznania, a argumenty przytoczone nie przekonują Cię - to absolutnie nie wykluczam, że to Ty masz rację 
-w danej sprawie. Materiał tutaj spisany jest opisem doświadczeń Starszych, dokonanym w dobrej wierze i ze szczerością. Ale dopiero życie wg ducha, prowadzenie 
-przez niego, owoce wiary i miłość są najbardziej istotne, a nie tylko teoretyczna wiedza - o której wszakże również warto dyskutować. 
-Pamiętajmy że "Poznanie nadyma, ale miłość buduje". 
-To Bóg objawia poszczególnym ludziom co chce - każdemu wg miary. Podobnie jak każdy członek w ciele pełni inne funkcje. 
-Jednak podstawowa miłość i jedność między ludźmi oddanymi Chrystusowi,   
-o co On sam zresztą się modlił, jest obecna mimo pewnych różnic w rozumieniu niektórych spraw. Wszyscy korzystamy z materiałów ludzi 
-z którymi nie zgadzamy się w pełni, a są wartościowe. Osobiście nie znalazłem na świecie osoby, 
-z którą w 100% zgadzam się w każdym najmniejszym aspekcie biblijnym i uważam to za sytuację normalną, zważywszy ilość treści jakie niesie Biblia 
-oraz ograniczony czas na jej interpretowanie i dyskusje. 
+Niniejsza strona w jakimś stopniu adresuje ten problem i daje biblijne wyjaśnienie wielu spornych spraw. 
+
+Materiały te mogą być pomocą we wzroście duchowym, ale 
+muszą być traktowane jedynie jako komentarz do Pisma Świętego, 
+które to Pismo jest jedynym spisanym autorytetem i wyjaśnia samo siebie, 
+jeśli tylko jego czytanie jest połączone z wiarą w Jezusa. 
+
+Jako osoba, która skopiowała te materiały, 
+nie uważam się za proroka, ani za osobę mającą monopol na prawdę. Prawda jest w Chrystusie i Chrystus jest Prawdą, 
+ja swoją wiarę (podobnie jak Autorzy ww. stron) i życie buduję na Słowie Bożym i prowadzeniu przez ducha świętego. 
+Jeżeli ktoś wskaże mi na podstawie Biblii, że się w czymś mylę to zmienię swój pogląd i będę wdzięczny za wykazanie go. 
   
-W jakichkolwiek sporach doktrynalnych 
-pamiętajmy o słowach naszego Pana: "Po tym wszyscy poznają, żeście uczniami moimi, jeśli miłość wzajemną mieć będziecie".
+Kopiując te zasoby traktuję to 
+z wielką odpowiedzialnością i powagą, ponieważ temat ten dotyka zarówno poznania naszego Stwórcy i Jego Słowa jak i życia poszczególnych ludzi. 
+  
+Liczę, że Dobry Ojciec pobłażliwie odniesie się 
+do moich ewentualnych nieświadomych błędów w tym temacie. Żywię nadzieję, że przyczynię się tym do zbliżania ludzi do Boga, a nie przeciwnie.</br></br>
+
+Strona jest przeznaczona zarówno dla niewierzących w Jezusa - jako możliwość poznania przez nich uzasadnienia naszej Nadziei co do życia wiecznego 
+oraz jako możliwość przyjęcia Ewangelii o darmowym zbawieniu z łaski, 
+
+jak również dla wierzących - celem ich zbudowania. Niniejsze materiały nie rozstrzygają definitywnie 
+poruszanych spraw, ponadto przedstawiono jedynie mały wycinek tego co można z Biblii zrozumieć. 
+ 
+Każdy z nas ma nieco inne rozumienie i nie każda rzecz jest przeznaczona do rozważania przez każdego człowieka na danym etapie jego życia. 
+
+Zalecam jednak spojrzenie nie z punktu widzenia autorytetu jakiejkolwiek ludzkiej hierarchii w której się tkwi 
+lub tradycyjnych poglądów ludzkich, ale z punktu widzenia czysto biblijnego.
+
+Jestem świadomy własnej niedoskonałości jak również możliwych błędów interpretacji Autorów cytowanych stron. 
+
+Jeżeli czytelnik jest przekonany co do swojej wiary i poznania, a argumenty przytoczone nie przekonują Go - to absolutnie nie wykluczam, 
+
+że może mieć rację w danej sprawie. Zachęcam również wówczas wówczas do kontaktu mailowego i wymiany poglądów. 
+  
+Materiał tutaj spisany jest opisem doświadczeń Starszych, dokonanym w dobrej wierze i ze szczerością. 
+  
+Ale dopiero wiara w Jezusa, a następnie życie wg ducha, prowadzenie przez niego i owoce wiary są najbardziej istotne. 
+  
+Nie tylko teoretyczna wiedza - o której wszakże również trzeba i warto rozmawiać.  Pamiętajmy że "Poznanie nadyma, ale miłość buduje". 
+
+To Bóg objawia poszczególnym ludziom co chce - każdemu wg miary. Podobnie jak każdy członek w ciele pełni inne funkcje. 
+
+Zachęcam do zachowania miłości i jedności między ludźmi oddanymi Chrystusowi,   
+o co On sam zresztą się modlił, mimo pewnych różnic w rozumieniu niektórych spraw. 
+  
+Wszyscy korzystamy z materiałów ludzi 
+z którymi nie zgadzamy się w pełni, a są wartościowe. 
+
+Ja nie znalazłem na świecie osoby, z którą w 100% zgadzam się w każdym najmniejszym aspekcie biblijnym 
+i uważam to za normalne zważywszy ilość treści jakie niesie Biblia, ograniczony czas na jej interpretowanie 
+i poziom szczegółowości dyskusji (często mamy tendencję do rozumienia więcej ponad to co napisano i tutaj głównie rodzą się jałowe spory).
+  
+W jakichkolwiek różnicach doktrynalnych pamiętajmy o słowach naszego Pana: 
+"Po tym wszyscy poznają, żeście uczniami moimi, jeśli miłość wzajemną mieć będziecie".
   
 </br></br>
 Koncepcja 1000-letniego królestwa Chrystusa jest prezentowana odmiennie na zamieszczonych stronach (thaleia.pl i jehoszua.ddv.pl) 
-ale ten aspekt nie ma znaczącego wpływu na życie chrześcijańskie. To ostatecznie Bóg pokaże nam jak wygląda lub też będzie wyglądać 
-"1000-letnie królewstwo", czy będzie ono literalne i jaki będzie jego cel dla wierzących i niewierzących za życia. 
+ale ten aspekt nie ma znaczącego wpływu na życie chrześcijańskie. 
+  
+To ostatecznie Bóg pokaże nam jak wygląda lub też będzie wyglądać 
+"1000-letnie królewstwo", czy będzie ono literalne i jaki będzie jego cel dla wierzących i niewierzących za życia.   
+ 
 Zaprezentowana interpretacja Księgi Apokalisy na jehoszua.ddv.pl jest w mojej opinii najbardziej bliska prawdy i prawdopodobna, 
 ale również nie może być przedmiotem dogmatycznej wiary i zawsze jest obarczona pewną dozą niepewności lub znaczenie pewnych symboli 
-(jak np. "znamię bestii") może być inne. Cel tej księgi jest zarówno indywidualny jak i uniwersalny. Skłaniam się ku przedstawionej interpretacji 
+(jak np. "znamię bestii") może być inne. 
+  
+Cel tej księgi jest zarówno indywidualny jak i uniwersalny. Skłaniam się ku przedstawionej interpretacji 
 (amillenarystycznej / historycznej), ale nie uważam konieczności wiary w którąś z wersji jako konieczną do zbawienia. 
+
 Część proroctw biblijnych i eschatologii jest jeszcze przed nami ukryta i pełna wiedza będzie znana na koniec czasów, co nie znaczy, 
 że pewne symbole nie są już jasne. Odrzucam także teorię o płaskiej, nieruchomej ziemi zaprezentowaną na wspomnianej stronie, 
 chociaż ten aspekt nie ma bezpośredniego wpływu na społeczność z Bogiem. 
 
 </br></br>
 Kopia stron, Pisma Św. i innych treści została dokonana w celu ich popularyzacji i zachowania dla przyszłych pokoleń na wypadek utraty 
-tych danych z serwerów źródłowych. Miejsc z tak wartościowym materiałem jest bardzo mało w polskim internecie, mam także nadzieję w przyszłości 
+tych danych z serwerów źródłowych. 
+  
+Miejsc z tak wartościowym materiałem jest bardzo mało w polskim internecie, mam także nadzieję w przyszłości 
 gromadzić tutaj inne zasoby antytrynitarne - jeśli Bóg pozwoli.
+
 Wszelkie prawa autorskie należą się Autorom skopiowanych witryn. Ja, który zebrałem te materiały nie należę do żadnego formalnego kościoła, 
 czy organizacji ludzkiej. Wierzę w zastępczą śmierć Chrystusa za wszystkich wierzących ludzi, w Jego zmartwychwstanie i w zmartwychwstanie 
 do życia wiecznego sprawiedliwych (oddanych Jezusowi, bo tylko tak mogą stać się "sprawiedliwymi" przed Bogiem) i zmartwychwstaniem 
-niesprawiedliwych na końcu czasów. Końcem tych którzy nie znajdą się finalnie pod łaskę Boga będzie "druga śmierć". 
+niesprawiedliwych na końcu czasów. 
+  
+Końcem tych którzy nie znajdą się finalnie pod łaskę Boga będzie "druga śmierć". 
+
 Wierzę, że kryterium braterstwa w Panu Jezusie jest (przytoczone ze strony thaleia.pl): pokuta czyli odwrócenie się od grzesznego życia, 
 wiara w Boga Ojca, wiara w Jezusa jako Bożego Syna oraz w Jego zastępczą ofiarę za popełnione grzechy, uznanie Go jako swojego Zbawiciela i Pana, 
 owoce życia będące świadectwem odrodzenia z Bożego Ducha. 
+  
 Ludzie wierzący w ten sposób i posłuszni słowom Syna Bożego to zbór Jezusa Chrystusa. 
-I choć nieliczni, znajdują się obecnie we wszystkich kościołach i poza nimi. Zapraszam do lektury!
+I choć nieliczni, znajdują się obecnie we wszystkich kościołach i poza nimi. Zapraszam do lektury.
 <div>
 <p style="float:left;font-size:14px;margin-left:3px;margin-top:3px;margin-bottom:3px;">( kontakt e-mail: mojabibliagithub@gmail.com )</p>
 
