--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@ Jestem świadomy własnej niedoskonałości jak również możliwych błędów i
 
 Jeżeli czytelnik jest przekonany co do swojej wiary i poznania, a argumenty przytoczone nie przekonują Go - to absolutnie nie wykluczam, 
 
-że może mieć rację w danej sprawie. Zachęcam również wówczas wówczas do kontaktu mailowego i wymiany poglądów. 
+że może mieć rację w danej sprawie. Zachęcam również wówczas do kontaktu mailowego i wymiany poglądów. 
   
 Materiał tutaj spisany jest opisem doświadczeń Starszych, dokonanym w dobrej wierze i ze szczerością. 
   
