--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
 <a href="https://mojabiblia.github.io/a" style="text-decoration: none;"> 
 <div class="boxBiblia">
-  <table style='display:table; width: 100%;cursor: pointer; cursor: hand;'>
+  <table style='display:table; width: 100%;cursor: pointer; cursor: hand;'>d
     <tr> <td class="row1"> blog.antytryniarianie.pl <i>(kopia)</i></td> </tr>
     <tr> <td class="row2"> </td></tr>
     <tr> <td class="row3"> Strona i blog antytrynitarian </td></tr>
@@ -71,8 +71,8 @@
 <table style="width: 100%;"> 
    <tr>
       <td style="text-align:center;color:white;width:20%;"><a></a></td> 
-      <td style="text-align:center;width:60%;"><a style="color: #ededed;font-style: italic;font-size:12px;">aktualizacja: 12.09.2022</a></td>
-      <td style="text-align:right;width:20%;"><a href="https://mojabiblia-github-io.translate.goog/?_x_tr_sl=pl&_x_tr_tl=en&_x_tr_hl=pl" style="font-size:12px;text-decoration: none;color:#6495ED">english</a></td>
+      <td style="text-align:center;width:60%;"><a style="color: #ededed;font-style: italic;font-size:14px;">aktualizacja: 12.09.2022</a></td>
+      <td style="text-align:right;width:20%;"><a href="https://mojabiblia-github-io.translate.goog/?_x_tr_sl=pl&_x_tr_tl=en&_x_tr_hl=pl" style="font-size:14px;text-decoration: none;color:#6495ED">english</a></td>
    </tr> 
 </table>
 
