--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
 <a href="https://mojabiblia.github.io/a" style="text-decoration: none;"> 
 <div class="boxBiblia">
-  <table style='display:table; width: 100%;cursor: pointer; cursor: hand;'>d
+  <table style='display:table; width: 100%;cursor: pointer; cursor: hand;'>
     <tr> <td class="row1"> blog.antytryniarianie.pl <i>(kopia)</i></td> </tr>
     <tr> <td class="row2"> </td></tr>
     <tr> <td class="row3"> Strona i blog antytrynitarian </td></tr>
